alignment fixed

--- a/main.scss
+++ b/main.scss
@@ -87,6 +87,8 @@ body {
     color: $black;
     justify-content: center;
     align-items: center;
+    justify-items: center;
+    align-content: center;
     display: flex;
     overflow-y: auto;
     width: 100%;
